--- a/style.css
+++ b/style.css
@@ -24,7 +24,11 @@
  }    
 
  .banner-content{
-    width: 50%;
+    width: 60%;
+ }
+
+ .banner-content *{
+    margin-bottom: 36px;
  }
 
  .banner-content h1{
@@ -32,10 +36,44 @@
     font-weight: bold;
  }
 
+ .banner-content p{
+    font-size: 18px;
+    font-weight: medium;
+    color: #A8A8A8;
+ }
+
  .banner-content h1 span{
     color: #F411CF;
  }
 
- .banner-img{
-    /* width: 50%; */
+ .btn{
+    background-color: #872BFF;
+    color: #FFFFFF;
+    border-radius: 30px;
+    padding: 16px 32px;
+    margin-right: 20px;
+    border: none;
+    font-size:14px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 1px solid #872BFF;
  }
+
+                    
+ .btn-white{
+    background-color: white;
+    color: black;
+    border-radius: 30px;
+    padding: 16px 32px;
+    margin-right: 20px;
+    font-size:14px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 1px solid #872BFF;
+ }
+
+ .banner-img{
+    width: 600px;
+ }
+
+ 
